<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wimple</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_more">..</string>
    <string name="action_go_to_whooing">후잉 바로가기</string>
    <string name="action_find_entry">검색</string>
    <string name="title_activity_web_view">후잉 서비스 로그인</string>
    <string name="program_exit">사용을 위해서는 로그인이 필요합니다. :)</string>
    <string name="na">" "</string>
    <string name="loggin_auth">로그인 확인</string>
    <string name="loggin_success">로그인 완료</string>
    <string name="loggin_failed">로그인 실패</string>
    <string name="loggin_user_info">사용자 계정정보 획득</string>
    <string name="loggin_end">계정정보획득 완료</string>
    <string name="drawer_open">사이드메뉴 열기</string>
    <string name="drawer_close">사이드메뉴 닫기</string>
    <string name="drawer_menu_transaction">거래</string>
    <string name="drawer_menu_financial_state">자산부채</string>
    <string name="drawer_menu_income_expense">비용수익</string>
    <string name="drawer_menu_preference">설정</string>
    <string name="mode_entry_insert">거래 입력</string>
    <string name="mode_entry_modify">거래 수정</string>
    <string name="mode_monthly_insert">매월 거래 입력</string>
    <string name="title_transaction_insert_fragment">거래 입력</string>
    <string name="title_transaction_list_fragment">거래 목록</string>
    <string name="title_settings_fragment">설정</string>
    <string name="settings_loggout">로그아웃</string>
    <string name="settings_summary_loggout">다른 계정으로 로그인하고자 로그아웃 합니다.</string>
    <string name="settings_general">일반</string>
    <string name="settings_entry">거래</string>
    <string name="settings_sections">섹션 선택</string>
    <string name="settings_summary_sections">후잉에 설정된 섹션을 선택합니다. 선택 시 앱이 다시 시작됩니다.</string>
    <string name="settings_entry_disable_memo">메모 입력창 표시 안함</string>
    <string name="settings_summary_entry_disable_memo">거래 입력 화면에서 메모 작성을 위한 입력란을 표시하지 않습니다.</string>
    <string name="settings_entry_monthly_display">월별 거래 입력 항목 표시</string>
    <string name="settings_summary_entry_monthly_display">등록된 월별 거래 입력 항목을 거래 내역 위에 표시합니다.</string>
    <string name="settings_entry_monthly_display_count">월별 거래 입력 항목 표시 개수</string>
    <string name="settings_summary_financial_state_auto_refresh">자산 부채 정보를 페이지를 열때 마다 새로운 내역을 반영합니다.</string>
    <string name="settings_financial_state_auto_refresh">자산 부채 자동 업데이트</string>
    <string name="settings_summary_financial_state_show_group">자산 부채 그래프의 항목을 개별 아이템이 아닌 그룹으로 묶어 표시합니다.</string>
    <string name="settings_financial_state_show_group">그룹 항목 그래프 보여주기</string>
    <string name="settings_summary_income_expense_state_auto_refresh">비용 수익 정보를 페이지를 열때 마다 새로운 내역을 반영합니다.</string>
    <string name="settings_income_expense_state_auto_refresh">비용 수익 자동 업데이트</string>
    <string name="settings_summary_income_expense_state_show_group">비용 수익 그래프의 항목을 개별 아이템이 아닌 그룹으로 묶어 표시합니다.</string>
    <string name="settings_income_expense_state_show_group">그룹 항목 그래프 보여주기</string>
    <string name="settings_summary_income_expense_state_enable_budget">비용 수익 정보와 함께 예산정보를 표시합니다.</string>
    <string name="settings_income_expense_state_enable_budget">예산 내역 표시</string>
    <string name="settings_sms">외부입력 전송</string>
    <string name="settings_summary_sms_post_enable">카드나 은행 사용 시 수신 된 SMS를 외부입력으로 전송합니다.</string>
    <string name="settings_sms_post_enable">결제 SMS 전송</string>
    <string name="settings_sms_max_store_number">전송을 위한 SMS 최소 개수</string>
    <string name="settings_summary_sms_max_store_number">지정된 개수의 SMS가 수신되면 후잉으로 전송합니다.</string>
    <string name="settings_entry_sms_max_store_number">전송을 위한 SMS 최소 개수</string>
    <string name="settings_summary_sms_pick_contact">외부입력을 위한 연락처를 선택합니다.</string>
    <string name="settings_sms_pick_contact">외부입력 대상 선택</string>
    <string name="settings_sms_contact_list">외부입력 대상 확인 및 삭제</string>
    <string name="settings_summary_sms_send_now">설정한 최소 개수와 상관없이 저장된 내역들을 전송합니다.</string>
    <string name="settings_sms_send_now">저장된 SMS 강제 전송</string>
    <string name="settings_sms_send_cant">저장된 SMS가 없습니다.</string>
    <string name="settings_sms_send_success">저장된 SMS 전송 되었습니다.</string>
    <string name="settings_sms_send_failed">저장된 SMS 전송에 실패하였습니다.</string>
    <string name="number_api_count">남은 보고서 조회 횟수 : </string>
    <string name="fatal_error">후잉 입력 앱을 실행할 수 없습니다. \n네트워크를 확인해 주시고, \n그래도 안된다면 ㅜㅜ..</string>
    <string name="pad_1">1</string>
    <string name="pad_2">2</string>
    <string name="pad_3">3</string>
    <string name="pad_4">4</string>
    <string name="pad_5">5</string>
    <string name="pad_6">6</string>
    <string name="pad_7">7</string>
    <string name="pad_8">8</string>
    <string name="pad_9">9</string>
    <string name="pad_10">0</string>
    <string name="pad_100">00</string>
    <string name="pad_point">.</string>
    <string name="pad_clear">C</string>
    <string name="pad_multiply">*</string>
    <string name="pad_divide">÷</string>
    <string name="pad_minus">-</string>
    <string name="pad_plus">+</string>
    <string name="pad_eq">=</string>
    <string name="pad_back">B</string>
    <string name="transaction_monthly">월별 거래들</string>
    <string name="insert_item_title">거래명</string>
    <string name="insert_left_accounts">왼쪽</string>
    <string name="insert_right_accounts">오른쪽</string>
    <string name="insert_invalid_title">거래 제목을 확인해 주세요.</string>
    <string name="insert_invalid_amount">거래 금액을 확인해 주세요.</string>
    <string name="insert_invalid_left_accounts">왼쪽 계정을 확인해 주세요.</string>
    <string name="insert_invalid_right_accounts">오른쪽 계정을 확인해 주세요.</string>
    <string name="insert_success">거래가 성공적으로 입력 되었습니다.</string>
    <string name="insert_failed">거래가 입력이 되지 않았습니다. 입력 내용과 네트워크 상태를 확인해 주세요.</string>
    <string name="entry_modify_notice">기존 거래내역을 수정합니다.</string>
    <string name="month_item_modify_notice">매월 입력 거래를 추가합니다.</string>
    <string name="modify_success">거래가 성공적으로 수정 되었습니다.</string>
    <string name="modify_failed">거래 수정이 되지 않았습니다. 수정 내용과 네트워크 상태를 확인해 주세요.</string>
    <string name="entry_header_asset_p">자산+</string>
    <string name="entry_header_asset_m">자산-</string>
    <string name="entry_header_debt_p">부채+</string>
    <string name="entry_header_debt_m">부채-</string>
    <string name="entry_header_capital_p">순자산+</string>
    <string name="entry_header_capital_m">순자산-</string>
    <string name="entry_header_income">수익</string>
    <string name="entry_header_expenses">비용</string>
    <string name="entry_header_income_expense_status"> 현재 수익/지출 현황 </string>
    <string name="entry_header_budget_income_expense_status"> 예산대비 수익/지출 현황 </string>
    <string name="title_saving">자산</string>
    <string name="title_debt">부채</string>
    <string name="title_income">수익</string>
    <string name="title_expense">지출</string>
    <string name="title_adjust">조정</string>
    <string name="title_group">그룹</string>
    <string name="title_memo">메모</string>
    <string name="description_memo">거래내역에 대한 메모를 입력하세요.</string>
    <string name="title_activity_splash_screen">Wimple</string>
    <string name="title_activity_wimple">후잉 거래 입력기</string>
    <string name="notice_need_auth">로그아웃 되거나 사용자 인증이 만료 되어 재인증이 필요합니다. 다시 로그인 및 승인을 해주세요.</string>
    <string name="notice_need_upgrade">후잉에서 제공되는 무료 보고서 조회 횟수를 모두 사용하셨습니다.(기본 하루 당 30번) 업그레이드를 추천 드립니다.</string>
    <string name="title_activity_payment_notice">PaymentNoticeActivity</string>
    <string name="about_payment_smile">(^_^);</string>
    <string name="about_payment">사용가능한 일일 API 요청수를 초과하였습니다.\n유료 사용자로 업그레이드를 하시면 더욱더 풍족하게 사용할 수 있습니다.</string>
    <string name="go_to_payment">업그레이드 방법 보기</string>
    <string name="close">오늘 하루 그만 보기</string>
    <string name="insert_new_item">새로운 거래내역을 추가 합니다.</string>
    <string name="modify_exist_item">거래내역을 수정 합니다.</string>
    <string name="update_latest_items">최신 거래내역으로 업데이트 합니다.</string>
    <string name="update_old_items">이전 거래내역을 가져옵니다.</string>
    <string name="update_as_date">최신 데이터로 업데이트 합니다.</string>
    <string name="notyet">예정</string>
    <string name="context_menu_delete_item">거래 항목 삭제</string>
    <string name="context_menu_one">one</string>
    <string name="context_menu_two">two</string>
    <string name="remove_entry_success">거래 내역이 정상적으로 삭제 되었습니다.</string>
    <string name="remove_entry_failed">거래 내역 삭제가 정상적으로 처리되지 않았습니다.</string>
    <string name="remove_monthly_item_success">매월 입력 거래가 정상적으로 삭제 되었습니다.</string>
    <string name="remove_monthly_item_failed">매월 입력 거래 삭제가 정상적으로 처리되지 않았습니다.</string>
    <string name="budget_not_yet">예산을 정해주세요.</string>
    <string name="budget_no_budget">예산없음</string>
    <string name="budget_nothing_budget">-</string>
    <string name="title_activity_post_news">후잉으로 뉴스보내기</string>
    <string name="action_settings">Settings</string>
    <string name="post_invalid_news_share_method">잘못된 뉴스 공유 방법입니다.</string>
    <string name="post_news_succeed">뉴스가 후잉에 성공적으로 등록되었습니다.</string>    
    <string name="post_news_failed">후잉에 뉴스 등록이 실패하였습니다. 네트워크 상황과 나의 앱들에서 wimple 권한에서 BBS가 있는지 확인해 주세요.</string>
    <string name="post_invalid_news_url">잘못된 뉴스 주소 입니다. 포스팅이 어렵겠는데요.</string>
    <string name="post_news_set_title">제목을 아래와 같이 변경하실래요?</string>
    <string name="post_news_title_imported">제목을 추출하였습니다.</string>
    <string name="post_news_wait_for_while">잠시만 기다려 주세요.</string>
    <string name="no_items">표시할 그룹이나 항목이 없습니다. (^_^);</string>
    <string name="permission_sms_recv">은행/카드 문자 수신을 위해 필요 - 외부입력 사용 시 수신된 문자를 후잉으로 전달하기 위함입니다. 외부 입력 사용안하시면 허가 안하셔도 됩니다.</string>
    <string name="permission_SMS_recv_deny">SMS 수신 권한을 거부 하셔서 외부 입력 기능은 사용할 수 없습니다. 사용하시려면 안드로이드 앱 설정에서 변경해주셔야 합니다.</string>
    <string name="permission_SMS_recv_accept">이제 설정의 외부 입력 기능을 사용하실 수 있습니다.</string>
    <string name="section">섹션</string>
</resources>