<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_general" >
        <Preference
            android:key="preference_logout"
            android:summary="@string/settings_summary_loggout"
            android:title="@string/settings_loggout" />
        <ListPreference
            android:key="preference_sections"
            android:summary="@string/settings_summary_sections"
            android:title="@string/settings_sections" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_sms" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_smsPostEnable"
            android:summary="@string/settings_summary_sms_post_enable"
            android:title="@string/settings_sms_post_enable" />
        <ListPreference
            android:key="pref_smsContactList"
            android:summary="@string/na"
            android:title="@string/settings_sms_contact_list" />
        <Preference
            android:key="pref_smsPickContact"
            android:summary="@string/settings_summary_sms_pick_contact"
            android:title="@string/settings_sms_pick_contact" />
        <Preference
            android:key="pref_smsSendNow"
            android:summary="@string/settings_summary_sms_send_now"
            android:title="@string/settings_sms_send_now" />
        <ListPreference
            android:defaultValue="5"
            android:dialogTitle="@string/settings_sms_max_store_number"
            android:entries="@array/monthly_item_count"
            android:entryValues="@array/monthly_item_count"
            android:key="pref_smsMaxStoreNumber"
            android:title="@string/settings_entry_sms_max_store_number" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_entry" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_disableMemo"
            android:summary="@string/settings_summary_entry_disable_memo"
            android:title="@string/settings_entry_disable_memo" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_monthlyItemDisplay"
            android:summary="@string/settings_summary_entry_monthly_display"
            android:title="@string/settings_entry_monthly_display" />

        <ListPreference
            android:defaultValue="5"
            android:dialogTitle="@string/settings_entry_monthly_display_count"
            android:entries="@array/monthly_item_count"
            android:entryValues="@array/monthly_item_count"
            android:key="pref_monthlyItemCount"
            android:title="@string/settings_entry_monthly_display_count" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/drawer_menu_financial_state" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_financialStateAutoRefresh"
            android:summary="@string/settings_summary_financial_state_auto_refresh"
            android:title="@string/settings_financial_state_auto_refresh" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_financialStateShowGroup"
            android:summary="@string/settings_summary_financial_state_show_group"
            android:title="@string/settings_financial_state_show_group" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/drawer_menu_income_expense" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_incomeExpenseStateAutoRefresh"
            android:summary="@string/settings_summary_income_expense_state_auto_refresh"
            android:title="@string/settings_income_expense_state_auto_refresh" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_incomeExpenseStateShowGroup"
            android:summary="@string/settings_summary_income_expense_state_show_group"
            android:title="@string/settings_income_expense_state_show_group" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_incomeExpenseStateEnableBudget"
            android:summary="@string/settings_summary_income_expense_state_enable_budget"
            android:title="@string/settings_income_expense_state_enable_budget" />
    </PreferenceCategory>
    
</PreferenceScreen>